# Data-Science---World-Cup

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  launch_jupyter_mcp.bat  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: notebook-02-import-kernel.md  venv-onedrive-dehydration.md
.planning/debug/resolved/: data01-historical-not-built.md
.planning/phases/01-fundaci-n-de-datos/: 01-01-PLAN.md  01-01-SUMMARY.md  (+12 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/metadata/: World.tsv.provenance.json  dc_params.provenance.json  elo_history.parquet.provenance.json  elo_ratings.parquet.provenance.json  en.teams.tsv.provenance.json  fifa_2026_regulations.provenance.json  fixture_2026.csv.provenance.json  former_names.csv.provenance.json  historical_matches.parquet.provenance.json  holdout_predictions.provenance.json  odds_provider_policy.json  results.csv.provenance.json  shootouts.csv.provenance.json
docs/: live_pipeline_runbook.md
notebooks/: 01_data_foundation.ipynb  02_modelos_baseline.ipynb  03_simulador_torneo.ipynb  04_primer_pronostico_pipeline.ipynb  05_ml_ensemble.ipynb
scripts/: build_notebook_05.py
src/cdd_mundial/: __init__.py
templates/: report_base.html.jinja  report_daily.html.jinja
tests/: conftest.py  test_baselines.py  test_contracts.py  test_data01_acceptance.py  test_data_foundation.py  test_dixon_coles.py  test_elo.py  test_fixture.py  test_identities.py  test_ingest_elo.py  test_ingest_martj42.py  test_knockout.py  test_live_calibration.py  test_live_pipeline.py  test_live_report.py  test_live_reproducibility.py  test_live_results.py  test_live_snapshots.py  test_loading.py  test_metrics.py  test_ml_calibration.py  test_ml_features.py  test_ml_selection.py  test_ml_validation.py  test_notebooks.py  test_odds.py  test_phase1_acceptance.py  test_provenance.py  test_repository.py  test_rules_fifa.py  test_simulation_engine.py  test_simulation_outputs.py  test_simulation_performance.py  test_slot_resolution.py  test_tournament_state.py  test_tournaments.py  test_validation_temporal.py
tests/validators/: assert_phase03_red.py  validate_third_place_mapping.py
(+153 files in other folders)
